# midi-lens

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
midi_lens/: Midi.py  Visualizer.py  __helpers.py  __main__.py  midi_lens.py
midi_lens/tests/: test_Midi.py  test_Visualizer.py  test__helpers.py  test_midi_lens.py
midi_lens/tests/data/: analysis.json
